<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout"
    android:background="@color/colorBackgroundLight"
    tools:context=".detail.EventDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:id="@+id/appbarLayout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="start"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_collapseMode="parallax"/>

            <View
                android:layout_gravity="bottom"
                android:background="@color/colorGrey600"
                android:alpha="0.5"
                android:fitsSystemWindows="true"
                android:layout_width="fill_parent"
                android:layout_height="70dip" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/when"
                android:textSize="18sp"
                android:textColor="@color/primaryText"/>

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/secondaryText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textColor="@color/primaryText"/>

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/secondaryText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="@string/arena"
                android:textSize="18sp"
                android:textColor="@color/primaryText"/>

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <fragment
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="16dp"
                android:id="@+id/map_view"
                tools:context=".destination.detail.DestinationDetailActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingBottom="5dp"
                android:text="@string/sub_event"
                android:textSize="18sp"
                android:textColor="@color/primaryText"/>

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/text_no_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_data"
                android:textColor="@color/secondaryText"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_sub_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="#00000000"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
